28-August-2011 Michael Babker
+ Add JLog logging to the content plugin and RSS feed
~ If feed language is *, set the tag to the site language

23-August-2011 Michael Babker
# Fix count method on feeds model

20-August-2011 Michael Babker
~ Ensure queries are properly quoted and not chained

12-August-2011 Michael Babker
~ Tweaks to RSS Feed to assist in validation
~ Use the feed language versus site

8-August-2011 Michael Babker
- Remove category field from podcast
+ Add <itunes:new-feed-url> definition
~ Modify the ordering clauses
# Add missing fields to front end feed edit

--------------------------------------------------
Podcast Manager 1.8.0 - Released 8-August-2011
--------------------------------------------------
8-August-2011 Michael Babker
# Fix a bug with the RSS path generation logic

2-August-2011 Michael Babker
~ Update pt-BR translation
~ Update SM2 to V2.97a.20110801

31-July-2011 Michael Babker Version 1.8 Changes
+ Add scriptfiles to the files packages to do basic pre-install checks
+ Add error checks for SQL in scriptfiles

29-July-2011 Michael Babker Version 1.8 Changes
# Correct the package XML so that it uninstalls the getID3 library too
~ Add script to add dummy menu item to supress error message at uninstall
~ Change version check notice to use JText
~ Add error checking to plugin activation functions

26-July-2011 Michael Babker Version 1.8 Changes
# File paths were incorrectly getting the site path stored with them
! Rework preg_match check in RSS feed to prevent path disclosure

23-July-2011 Michael Babker Version 1.8 Changes
- Removed Information view
- Removed Components submenu items
+ Added cpanel view as new default landing
+ Added Akeeba Live Update support

21-July-2011 Michael Babker Version 1.8 Changes
+ Add script to display the position within the playing file

17-July-2011 Michael Babker Version 1.8 Changes
+ Add ability to select default sorting for feed view
+ Add pt-BR translation