@@ -4,6 +4,7 @@
 ; Double quotes in the values have to be formatted as "_QQ_"
 
 COM_PODCASTMANAGER="Podcast Manager"
+COM_PODCASTMANAGER_DATE_FILTER_LABEL="Date Filter"
 COM_PODCASTMANAGER_DEFAULT_PAGE_TITLE="Podcast Feed"
 COM_PODCASTMANAGER_ERROR_FINDING_FILE="Could not locate the file %s on the file system, skipping feed item"
 COM_PODCASTMANAGER_FEED_DATA="Feed Data"
@@ -50,9 +51,11 @@ COM_PODCASTMANAGER_FIELD_PUBLISHED_DESCRIPTION="The published state of the podca
 COM_PODCASTMANAGER_FIELD_TITLE_DESCRIPTION="The title of the podcast episode."
 COM_PODCASTMANAGER_FIELD_TITLE_LABEL="Title"
 COM_PODCASTMANAGER_FIELDSET_PUBLISHING="Publishing Options"
+COM_PODCASTMANAGER_FILTER_SEARCH_DESCRIPTION="Feed Filter Search"
 COM_PODCASTMANAGER_FORM_ADD_PODCAST="Add New Podcast"
 COM_PODCASTMANAGER_FORM_EDIT_PODCAST="Edit Podcast"
 COM_PODCASTMANAGER_HEADING_FEEDNAME="Feed Name"
 COM_PODCASTMANAGER_METADATA="Podcast Metadata"
 COM_PODCASTMANAGER_NO_ITEMS="No podcasts are present in this feed."
 COM_PODCASTMANAGER_SELECT_FEEDNAME=" - Select Feed - "
+COM_PODCASTMANAGER_TITLE_FILTER_LABEL="Title Filter"
