@@ -1,3 +1,6 @@
+31-August-2011 Michael Babker
++ Add search filter for front end feed view
+
 28-August-2011 Michael Babker
 + Add JLog logging to the content plugin and RSS feed
 ~ If feed language is *, set the tag to the site language
